kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/heterogeneous/implicit_before_unlabeled.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let f = fun _(~y: Nat, x: Nat): Nat {
    Nat.o
};
